--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.25</version>
 		</dependency>
+		<dependency>
+		      <groupId>com.auth0</groupId>
+		      <artifactId>java-jwt</artifactId>
+		      <version>3.4.0</version>
+		</dependency>
 		<!-- 热部署 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
