--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+		<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-websocket</artifactId>
+</dependency>
 	</dependencies>
 
 
